cont-stack-jmh-native-access: the Jmh package carries the jdk22 StackRoom (Multi-Release) and the Jmh host drops the inherited --enable-native-access — every lane keeps the count road, -jvmArgsAppend --enable-native-access=ALL-UNNAMED runs it on the exact road; ContStackRoad prints each fork's road and where its reader came from; the room comment corrected (the lanes inherit room=64)
Claude-Session: https://claude.ai/code/session_01VZwf6drLbEaLiAvXi7aDGG